# jaxtra

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
jaxtra/: __init__.py  activations.py  data_loader.py  layers.py  models.py
logs/: CHANGELOG.md
