[metadata]
name = jaxtra
version = 0.0.1
author = Amirhossein Ghanipour
author_email = amirhosseinghanipour@fgn.ui.ac.ir
description = JAXTRA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amirhosseinghanipour/jaxtra
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = jax, deep learning, neural networks, artificial intelligence

[options]
packages = find:
python_requires = >=3.11.9
install_requires =
    jax

; [options.extras_require]
; dev =
;     nunmpy
;     jaxlib